subprojects/swen430/src/test/resources/com/hjwylde/uni/swen430/assignment01/tests/valid/Switch_Valid_12.while
int f(int c) {
    int ret = 0;
    switch(c) {
        case 1:
            ret = 1;
            break;
        default:
            ret = 3;
        case 2:
            ret = 2;
    }

    return ret;
}

void main() {
    print f(1);
}
