subprojects/swen430/src/test/resources/com/hjwylde/uni/swen430/assignment01/tests/invalid/Typing_Invalid_29.while
real f([int] xs) {
    return xs[0];
}